--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.1.0"
+  },
+  "dependencies": {
+    "@apollo/client": "^3.5.7",
+    "@apollo/react-hooks": "^4.0.0",
+    "graphql": "^16.2.0"
   }
 }
