--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@apollo/client": "^3.5.7",
     "@apollo/react-hooks": "^4.0.0",
+    "apollo-server-express": "^3.6.1",
     "graphql": "^16.2.0"
   }
 }
